--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 
 <body>
   <div id="react-app"></div>
-  <script src="common.js"></script>
-  <script src="app.js"></script>
+  <script src="/common.js"></script>
+  <script src="/app.js"></script>
 </body>
 
 </html>
